--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <title>Alfabet</title>
 
     <link rel="stylesheet" href="src/styles.css" />
-    <link rel="stylesheet" href="src/responsive.css" />
   </head>
   <body>
     <header>
@@ -90,7 +89,11 @@
                   <div class="char__pronounce">dé</div>
                 </div>
                 <div class="char__example">
-                  <img class="char__example-img" src="/src/images/leaf.png" alt="Daun" />
+                  <img
+                    class="char__example-img"
+                    src="/src/images/leaf.png"
+                    alt="Daun"
+                  />
                   <p class="char__example-name">Daun</p>
                 </div>
               </article>
